--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,30 @@
-<h1>
-  {{title}}
-</h1>
+<div id='main-container'>
+	<div class="demo-container" mdl-shadow="2">
+	   <mdl-layout mdl-layout-fixed-header mdl-layout-tab-active-index="0" (mdl-layout-tab-active-changed)="tabChanged($event)">
+	      <mdl-layout-header>
+	         <mdl-layout-header-row>
+	            <mdl-layout-title>{{title}}</mdl-layout-title>
+	         </mdl-layout-header-row>
+	      </mdl-layout-header>
+	      <mdl-layout-drawer>
+	         <mdl-layout-title>Title</mdl-layout-title>
+	      </mdl-layout-drawer>
+	      <mdl-layout-content>
+	         <mdl-layout-tab-panel>
+						<mdl-tab-panel-title>
+							<mdl-icon class="mdl-color-text--primary">person</mdl-icon><span>Main</span>
+						</mdl-tab-panel-title>
+						<mdl-tab-panel-content>
+							<debt-table></debt-table>
+						</mdl-tab-panel-content>
+	         </mdl-layout-tab-panel>
+	         <mdl-layout-tab-panel mdl-layout-tab-panel-title="Tab 2">
+	            2
+	         </mdl-layout-tab-panel>
+	         <mdl-layout-tab-panel mdl-layout-tab-panel-title="Tab 3">
+	            3
+	         </mdl-layout-tab-panel>
+	      </mdl-layout-content>
+	   </mdl-layout>
+	</div>
+</div>
